# legacy-code-archive-mcp

./: .env.example  .gitignore  DEPLOY.md  EVALUATION.md  QUICKSTART.md  README.md  USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
legacy_code_archive_mcp/: __init__.py  chunking.py  config.py  database.py  embeddings.py  indexing.py  models.py  server.py
