[project]
name = "legacy-code-archive-mcp"
version = "1.0.0"
description = "시맨틱 검색을 활용한 레거시 코드 프로젝트 인덱싱 및 검색 MCP 서버"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "legacy-code", "semantic-search", "openai", "lancedb", "code-indexing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.13.1",
    "lancedb>=0.25.3",
    "openai>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
legacy-code-archive-mcp = "legacy_code_archive_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["legacy_code_archive_mcp"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.uv]
dev-dependencies = [
    "taskipy>=1.13.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.taskipy.tasks]
# 개발 서버
dev = "python -m legacy_code_archive_mcp.server"
d = "task dev"

# 테스트
test = "pytest tests/ -v"
t = "task test"
test-cov = "pytest tests/ --cov=legacy_code_archive_mcp --cov-report=html"

# 코드 품질
lint = "ruff check . && black --check ."
l = "task lint"
format = "black . && ruff check --fix ."
f = "task format"
type-check = "mypy legacy_code_archive_mcp/"

# 빌드
build = "python -m build"
clean = "rm -rf dist/ build/ *.egg-info/ **/__pycache__ .pytest_cache/ .coverage htmlcov/"

# 전체 체크 (CI용)
check = "task lint && task type-check && task test"
